# stary

./: .env.example  .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml  sensor.py
agents/: __init__.py  agent1_jira_reader.py  agent2_implementer.py
dagster/: logging.json
dagster/dev/dagster/: Dockerfile  dagster.yaml  workspace.yaml
dagster/dev/user_deployment/: Dockerfile
dagster/prod/dagster/: dagster.yaml  workspace.yaml
dagster/prod/user_deployment/: Dockerfile  values_base.yaml  values_custom.yaml
docs/: verifai_xpu_domain.md  verifai_xpu_poc_runbook.md
k8s/: grafana-dashboard-github.json  grafana-dashboard-jenkins.json  grafana-dashboard-jira.json  grafana-datasources.yaml  grafana.yaml  otel-collector-config.yaml  otel-collector.yaml  prometheus-config.yaml  prometheus.yaml  tempo-config.yaml  tempo.yaml
orchestrator/: orchestrator.py
requirements/: base.txt  dagster.txt  dagster_user_deployment.txt
scripts/: build_dagster_docker.sh  build_package.sh  deploy_dagster_docker.sh  deploy_k8s.sh  deploy_package.sh  test-compose.sh
src/stary/: __init__.py  config.py  github_adapter.py  jenkins_adapter.py  jira_adapter.py  main.py  sensor.py  telemetry.py  ticket_status.py
src/stary/agents/: __init__.py  implementer.py  (+9 more)
tests/: test_config.py  test_cursor_dedup.py  test_dagster_run_url_integration.py  test_github_adapter.py  test_github_tools.py  test_jenkins_adapter.py  test_jenkins_tools.py  test_lifecycle.py  test_sensor_wip_comment.py  test_state_validator.py  test_ticket_status.py  test_trigger_detector.py  test_validator.py
(+9 files in other folders)
