[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stary"
version = "0.1.0"
description = "Stary – Software Task Agentic Resolution sYstem"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "dagster>=1.9.0",
    "dagster-webserver>=1.9.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver",
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["stary*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
