[build-system]
requires = ["setuptools>=68.0", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "stary"
authors = [
    { name="Jakub Klawikowski", email="jakub.klawikowski@intel.com" },
]
version = "0.2.3"
description = "Stary – Software Task Agentic Resolution sYstem"
readme = "README.md"
requires-python = ">=3.10"

dynamic = [
    "dependencies"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["stary*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements/base.txt"]}
